chaos-platform/dashboard/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: chaos-engine
  labels:
    app: dashboard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        fsGroup: 1001

      containers:
        - name: dashboard
          image: chaos-platform/dashboard:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http

          resources:
            requests:
              cpu:    200m
              memory: 256Mi
            limits:
              cpu:    500m
              memory: 512Mi

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 15

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false   # nginx writes to /tmp and /var/cache
            capabilities:
              drop: ["ALL"]

      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: dashboard
                topologyKey: kubernetes.io/hostname
